<resources>
    <string name="app_name">MeteoLecce</string>
    <string name="button_update">Update</string>
    <string name="data_viewer">Data</string>
    <string name="tempName">Temperatura</string>
    <string name="temperature"></string>
    <string name="pressureName">Pressione</string>
    <string name="pressure"></string>
    <string name="windName">Vento</string>
    <string name="windDir">Direzione</string>
    <string name="wPower"></string>
    <string name="wDir"></string>
    <string name="humidity"></string>
    <string name="humName">Umidità</string>
    <string name="titleMainPage">SITUAZIONE ATTUALE</string>
    <string name="update">Aggiorna</string>
    <string name="cloudsName">Copertura</string>
    <string name="clouds"></string>
    <string name="phenomenon"></string>
    <string name="titleWeather3Forecast">PROSSIMI 3 GIORNI</string>
    <string name="forecast3">Previsioni</string>
    <string name="temperature3d_1"></string>
    <string name="humidity3d_1"></string>
    <string name="date"></string>
    <string name="firstDay"></string>
    <string name="secondDay"></string>
    <string name="thirdDay"></string>
    <string name="temperature3d_2"></string>
    <string name="temperature3d_3"></string>
    <string name="humidity3d_2"></string>
    <string name="humidity3d_3"></string>
    <string name="tempNameMinMax">Temp. min/max</string>
    <string name="testo2">jd 394dj3 d30 3 bf83 bef webfp bef beurfb8er bf8 erf80er bf0 berf0ber ufbdo fvbe 8yrv b8er0bv80re bv80 bre08v be0 vbe8 rbvr8ebvyerfuye bv08cebrv8 ebrv0 ber80 ber80bv08 b8er0v b0yer bv0 ebv0 sdubfbv08dbv8r0e vb80re bv80 erbv0 efb 0v8 ebv8 rebv08re b</string>
    <string name="urlMetCheck">www.metcheck.com/IMAGES/LOGOS/ghx_poweredby.png</string>
    <string name="mainWeatheriIcon">Icon that contains actual weather condition</string>
    <string name="logoMetcheckIcon">metcheck logo</string>
    <string name="wind3d_2" />
    <string name="wind3d_3" />
    <string name="wind3d_1" />
    <string name="previstoABreve">Previsto tra qualche ora...</string>
</resources>
